--- a/Home.html
+++ b/Home.html
@@ -69,7 +69,7 @@
 
         <!----- footer ------>
             <footer>
-                All right reversed | &copy Auto Revive Nigeria Limited 2021
+                All right reserved | &copy Auto Revive Nigeria Limited 2021
             </footer>
         <!--x-- footer --x--->
     </body>
